--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     </p>
                     <div class="botones">
                             <button class="btn-primary"><a href="#projects">Projects</a></button>
-                            <button class="btn-secundary">Contact Me</button>
+                            <button class="btn-secundary"><a href="#contact">Contact Me</a></button>
                     </div>
                 </div>
                 
@@ -102,7 +102,7 @@
 
 
                     </div>
-                    </a href="#https://drive.google.com/file/d/1cbipHeCHeC2pa8P2RtiOWfseBuXWu9cq/view?usp=drive_link" DOWNLOAD=""><button class="btn-primary">DOWNLOAD CV</button></a>
+                    <button class="btn-primary"><a href="#https://drive.google.com/file/d/1cbipHeCHeC2pa8P2RtiOWfseBuXWu9cq/view?usp=drive_link" target="_blank">DOWNLOAD CV</a></button>
                 </div>
                 <div class="col">
                     <div class="circulo-principal"></div>
